Setting's UI code clean up

--- a/public/app/setting/fatugue_driving_time.html
+++ b/public/app/setting/fatugue_driving_time.html
@@ -1,13 +1,13 @@
 <div class="container center">
-    <b class="headerrow">Fatigue Driving Time</b>
+    <p class="headerrow">Fatigue Driving Time</p>
     <div class="row">
         <div class="col s12 m12 l12">
-            <div class="col s12 m12 l3 offset-l3">
-                <label for="minimum" class="active">Threshold: (Minute)</label>
+            <div class="col s12 m12 l3 offset-l3 input-field">
+                <label for="minimum">Threshold: (Minute)</label>
                 <input id="minimum" type="number" maxlength="2">
             </div>
-            <div class="col s12 m12 l3 ">
-                <label for="maximum" class="active">Buffer Time: (Minute)</label>
+            <div class="col s12 m12 l3 input-field">
+                <label for="maximum">Buffer Time: (Minute)</label>
                 <input id="maximum" type="number" maxlength="2">
             </div>
         </div>
