--- a/public/app/setting/home.html
+++ b/public/app/setting/home.html
@@ -13,7 +13,7 @@
         <li><a ui-sref=".bay_information">Bay Information</a></li>
     </ul>
     <div class="row center">
-        <select class="browser-default col l6 push-l3"></default-browser>">
+        <select class="browser-default col l6 push-l3">
             <optgroup label="SHSJB">
                 <option value="volvo">AGX 4139</option>
                 <option value="saab">ABP 1932</option>
@@ -27,6 +27,7 @@
             </optgroup>
         </select>
     </div>
+    <div class="divider"></div>
     <div ui-view></div>
 </div>
 
