--- a/public/app/setting/message_to_device.html
+++ b/public/app/setting/message_to_device.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="container center">
         <div class="headerrow">
-            <b>Message to Device</b>
+            <p>Message to Device</p>
         </div>
         <div class="col s12 m12 l12">
             <textarea class="resize"></textarea>
