--- a/public/app/setting/parking.html
+++ b/public/app/setting/parking.html
@@ -1,12 +1,12 @@
 <div class="container center">
-    <b class="headerrow">Parking Alarm</b>
+    <p class="headerrow">Parking Alarm</p>
     <div class="row">
         <div class="col s12 m12 l6 offset-l3">
-            <div class="col s12 m12 l4">
+            <div class="col s12 m12 l6">
                 <p>Time Threshold:<br/>(0-65535)</p>
             </div>
-            <div class="col s12 m12 l6">
-                <input id="parking" type="number" min="0" maxlength="5">
+            <div class="col s12 m12 l6 input-field">
+                <input id="parking" type="number" min="0" maxlength="5" value="0" class="center">
                 <label for="parking" class="active">Minute</label>
             </div>
         </div>
