--- a/public/app/setting/peripheral_settings.html
+++ b/public/app/setting/peripheral_settings.html
@@ -10,7 +10,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Emergency alarm
+                <span class="switch_label">Emergency alarm</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -21,7 +21,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Air-conditioning test
+                <span class="switch_label">Air-conditioning test</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -32,7 +32,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Power failure alarm
+                <span class="switch_label">Power failure alarm</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -43,7 +43,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Low power detection
+                <span class="switch_label">Low power detection</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -54,7 +54,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Undervoltage alarm
+                <span class="switch_label">Undervoltage alarm</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -65,7 +65,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Door status detection
+                <span class="switch_label">Door status detection</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -76,7 +76,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Overvoltage alarm
+                <span class="switch_label">Overvoltage alarm</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -87,7 +87,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;ACC detection
+                <span class="switch_label">ACC detection</span>
             </div>
         </div>
         <div class="col s12 m12 l5 push-l1">
@@ -98,7 +98,7 @@
                     <span class="lever"></span>
                     On
                 </label>
-                &nbsp;&nbsp;Oil change alarm
+                <span class="switch_label">Oil change alarm</span>
             </div>
         </div>
 
