--- a/public/app/setting/speed_threshold.html
+++ b/public/app/setting/speed_threshold.html
@@ -1,12 +1,11 @@
 <div class="container center">
-    <b class="headerrow">Speed Threshold</b>
+    <p class="headerrow">Speed Threshold</p>
     <div class="row">
         <div class="col s12 m12 l6 offset-l3">
-            <div class="col s12 m12 l5">Speed threshold (0-255)</div>
+            <div class="col s12 m12 l9">Speed threshold (0-255 km/h)</div>
             <div class="col s12 m12 l3"><input id="speed" type="number" min="0" maxlength="3">
                 <label for="speed" class="active"></label>
             </div>
-            <div class="col s12 m12 l1">km/h</div>
         </div>
         <div class="input-field col s12 m12 l4 offset-l4">
             <input id="password" type="text">
