--- a/public/app/setting/timezone.html
+++ b/public/app/setting/timezone.html
@@ -1,5 +1,5 @@
 <div class="container center">
-    <b class="headerrow">Timezone</b>
+    <p class="headerrow">Timezone</p>
     <div class="row">
         <p>please set difference value based on GMT:</p>
         <div class="col s12 m12 l12">
@@ -15,14 +15,14 @@
         <div class="col s12 m12 l12">
             <form action="#">
                 <div class="col s12 m12 l12">
-                    <p class="col s12 m12 l3 push-l3">
+                    <span class="col s12 m12 l3 push-l3">
                         <input type="radio" id="east" />
-                        <label for="east">Meridian East(+)</label>
-                    </p>
-                    <p class="col s12 m12 l3 offset-l2">
+                        <label for="east">Meridian East</label>
+                    </span>
+                    <span class="col s12 m12 l3 push-l3">
                         <input type="radio" id="west" />
-                        <label for="west">Meridian West(-)</label>
-                    </p>
+                        <label for="west">Meridian West</label>
+                    </span>
                 </div>
             </form>
         </div>
