--- a/public/app/setting/geo_fence.html
+++ b/public/app/setting/geo_fence.html
@@ -2,26 +2,17 @@
     <p class="headerrow">Geo Fence</p>
     <div class="row">
         <div class="col s12 m12 l4 geofencebd">
-            <p class="geofencehead">Areas</p>
-            <div class="col s12 m12 l5">
-                Area name:
-            </div>
-            <div class="col s12 m12 l7">
+            <p class="geofencehead">Area</p>
+            <div class="col s12 m12 l12 input-field">
                 <input id="areaname" type="text">
-                <label for="areaname" class="active"></label>
-            </div>
-            <div class="col s12 m12 l12">
-                <p class="geofencehead"><b>Area Name</b></p>
+                <label for="areaname" class="active">Area Name</label>
             </div>
         </div>
-        <div class="col s12 m12 l8 geofencebd" style="border-left:0px;height:167px;">
+        <div class="col s12 m12 l8 geofencebd" style="border-left:0px;">
             <p class="geofencehead">Vehicle</p>
-            <div class="col s12 m12 l3 push-l1">
-                Plate NO:
-            </div>
-            <div class="col s12 m12 l7">
+            <div class="col s12 m12 l12 input-field">
                 <input id="plateno" type="text">
-                <label for="plateno" class="active"></label>
+                <label for="plateno" class="active">Plate Number</label>
             </div>
         </div>
     </div>
