--- a/public/app/setting/sms_altering.html
+++ b/public/app/setting/sms_altering.html
@@ -1,72 +1,72 @@
 
-<div class="container center">
-    <b class="headerrow">SMS Altering Setting</b>
+<div class="container">
+    <p class="headerrow">SMS Altering Setting</p>
     <div class="row">
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Power Off Alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                <span class="switch_label">Power Off Alarm</span>
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Emergency Test:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                <span class="switch_label">Emergency Test</span>
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Speed Alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                <span class="switch_label">Speed Alarm</span>
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Temperature Alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                <span class="switch_label">Temperature Alarm</span>
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Oil Changing Alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                <span class="switch_label">ACC ON</span>
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                ACC ON:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
-            </div>
+                <span class="switch_label">Oil Changing Alarm</span>
+                </div>
         </div>
         <div class="input-field col s12 m12 l4 offset-l4 password">
             <input id="password" type="text">
