--- a/public/app/setting/temperature.html
+++ b/public/app/setting/temperature.html
@@ -1,13 +1,13 @@
 <div class="container center">
-    <b class="headerrow">Temperature</b>
+    <p class="headerrow">Temperature</p>
     <div class="row">
         <div class="col s12 m12 l12">
-            <div class="col s12 m12 l3 offset-l3">
-                <label for="minimum" class="active">Minumum ( ℃ )</label>
+            <div class="col s12 m12 l3 offset-l3 input-field">
+                <label for="minimum">Minumum ( ℃ )</label>
                 <input id="minimum" type="number" maxlength="2">
             </div>
-            <div class="col s12 m12 l3 ">
-                <label for="maximum" class="active">Maximum ( ℃ )</label>
+            <div class="col s12 m12 l3 input-field">
+                <label for="maximum">Maximum ( ℃ )</label>
                 <input id="maximum" type="number" maxlength="2">
             </div>
         </div>
