globalized admin routing

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         <script src="app/dashboard/dashboard.js"></script>
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
+        <script src="app/admin/home.js"></script>
         <script src="app/admin/users.js"></script>
         <script src="app/admin/location.js"></script>
         <script src="app/shared/user.js"></script>
