--- a/public/app/report/operation_log.html
+++ b/public/app/report/operation_log.html
@@ -1,39 +1,55 @@
 <p class="headerrow">Operation Log Query</p>
 <div class="row">
-    <div class="col s12 m12 l12 mainborder">
-        <div class="col s12 m12 l12">
-            <div class="input-field col s12 m12 l2">
-                <input id="username" type="text" placeholder="Username:">,
+    <div class="col s12 m12 l9">
+        <div class="col s12 m12 l2">
+            <div class="input-field col s12 m12 l12">
+                <input id="username" type="text">
+                <label for="username">Username:</label>
             </div>
-            <div class="col s12 m12 l2">
-                Operation Type:<select>
-                <option value="alloperation">All Operation</option>
-                <option value="closeoil">Close Oil</option>
-                <option value="oilrecovery">Oil Recovery</option>
-                <option value="samplingtimesetting">Sampling Time Setting</option>
-                <option value="mileagereset">Mileage Reset</option>
+        </div>
+
+        <div class="col s12 m12 l3">
+            <p>Fleet & Number Plate:</p>
+            <select class="browser-default col s12 m12 l12">
+                <optgroup label="SHSJB">
+                    <option value="volvo">AGX 4139</option>
+                    <option value="saab">ABP 1932</option>
+                </optgroup>
+                <optgroup label="SHSKL">
+                    <option value="mercedes">BAC 2932</option>
+                    <option value="audi">BEY 3416</option>
+                </optgroup>
+                <optgroup label="BH PORT KLANG">
+                    <option value="mercedes">BLV 503</option>
+                </optgroup>
             </select>
+        </div>
+
+        <div class="col s12 m12 l5">
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    From:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="from" type="month">
+                </div>
             </div>
-            <div class="col s12 m12 l2">
-                Plate NO:<select>
-                <option value="ABC1234">ABC1234</option>
-                <option value="DEF5678">DEF5678</option>
-                <option value="GHI2345">GHI2345</option>
-            </select>
-            </div>
-            <div class="col s12 m12 l2">
-                Execution Time:<input id=time type="month">
-            </div>
-            <div class="col s12 m12 l2">
-                To:<input id="month" type="month">
-            </div>
-            <div class="col s12 m12 l2">
-                <a class="btn">Search</a>
+
+            <div class="col s12 m12 l12" style="margin-top:2%">
+                <div class="col s12 m12 l2">
+                    To:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="to" type="month">
+                </div>
             </div>
         </div>
     </div>
+    <div class="col s12 m12 l2">
+        <a class="btn">Search</a>
+    </div>
 
-    <div class="col s12 m12 l12" style="border:1px black solid;border-top:none">
+    <div class="col s12 m12 l12">
         <table>
             <thead>
             <tr>
@@ -46,26 +62,29 @@
             </tr>
             </thead>
             <tbody>
-
+            <tr>
+                <td>admin</td>
+                <td>192.168.1.1</td>
+                <td>ABC1234</td>
+                <td>08:45:00</td>
+                <td>Operation</td>
+                <td>Operation</td>
+            </tr>
             </tbody>
         </table>
     </div>
 
-    <div class="col s12 m12 l12">
-        <table>
-            <td style="text-align: right; vertical-align: middle;" id="tdPage">
-                <a id="Pager1_btnFirst" class="aspNetDisabled btnPage">Home</a>
-                <a id="Pager1_btnPrevious" class="aspNetDisabled btnPage">Previous</a>
-                <a style="margin-right: 10px; margin-left: 5px;">
-                    <span id="Pager1_lblCurrentPage">1</span>/0</a>
-                <a id="Pager1_btnNext" class="aspNetDisabled btnPage">Next</a>
-                <a id="Pager1_btnLast" class="aspNetDisabled btnPage">Last</a><span style="margin-left: 15px; margin-right: 15px;"> Total page:
-                            <span id="Pager1_lblPageCount">0</span>
-                            ，<span id="Pager1_lblItemCount">0</span> items，</span>Redirect to<input name="Pager1$tbPageIndex" type="text" id="Pager1_tbPageIndex" style="width:25px;">
-                <input type="submit" name="Pager1$btnRedirect" value="GO" onclick="return CheckPageIndex();" id="Pager1_btnRedirect">
-                &nbsp;&nbsp;
-            </td>
-        </table>
+    <div class="right" style="padding-top:1%">
+        <div class="col s12 m12 l12">
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+            </ul>
+        </div>
     </div>
-
 </div>
