--- a/public/app/dashboard/user_profile.html
+++ b/public/app/dashboard/user_profile.html
@@ -1,1 +1,34 @@
-User Profile
+<p>Profile Information</p>
+			    	<div class="row">
+					    <div class="col m5 s12">
+					      	<label>Country</label>
+					      	<select class="browser-default" name="country">
+						        <option value="0" selected disabled>Country</option>
+						        <option value="244">Aaland Islands</option>
+						        <option value="1">Afghanistan</option>
+						        <option value="2">Albania</option>
+					      	</select>
+					    </div>
+					    <div class="col m4 s12">
+					      	<div class="input-field">
+						        <input id="input_city" value="Georgetown" type="text" name="city">
+						        <label for="input_city">City</label>
+					      	</div>
+					    </div>
+					    <div class="col m3 s12">
+					      	<div class="input-field">
+						        <input id="input_postcode" value="12345" type="text" name="post_code">
+						        <label for="input_postcode">Post code</label>
+					      	</div>
+					    </div>
+				    </div>
+					<div class="input-field">
+			    		<input id="input_address" value="12-1-1, Mary Town"  type="text" name="address">
+			    		<label for="input_address">Address</label>
+		  			</div>
+		 
+			  		<div class="input-field">
+			    		<textarea id="textarea_additional" class="materialize-textarea" name="additional">Note: handle with care</textarea>
+			    		<label for="textarea_additional">Additional info</label>
+			  		</div>
+			</div>
