dashboard, report with better ui

--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -1,5 +1,127 @@
-Dashboard (car list)
 <div class="row">
+    <div class="card col s12 m12 l6" style="height:500px">
+        <div class="card-title col s12 m12 l12">
+            <p><i class="fa fa-bar-chart"></i><b style="margin-left:2%">Member Activity</b></p>
+        </div>
+        <div class="card-content col s12 m12 l12">
+            <div class="container col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    <p style="font-size:130%;text-align:right">Total</p>
+                    <b style="font-size:250%">2640</b>
+                </div>
+                <div class="col s12 m12 l5">
+                    <!--GRAPH-->
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m12 l12">
+            <table>
+                <thead>
+                <tr>
+                    <td><b>FLEET</b></td>
+                    <td><b>MEMBER</b></td>
+                    <td><b>PLATE NO</b></td>
+                    <td><b>PHONE NO</b></td>
+                    <td><b>ADDRESS</b></td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>ABCDE</td>
+                    <td>GENE LIM</td>
+                    <td>ABC1234</td>
+                    <td>0123456789</td>
+                    <td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td>DEFGH</td>
+                    <td>DENNIS LEE</td>
+                    <td>DEF5678</td>
+                    <td>0124356789</td>
+                    <td>67 Lorong Kinta,10400 Georgetown, Pulau Pinang</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="card col s12 m12 l6" style="height:500px">
+        <div class="card-title col s12 m12 l12">
+            <p style="color:#2ab4c0"><i class="fa fa-globe"></i><b style="margin-left:2%">FEEDS</b></p>
+        </div>
+        <div class="card-content col s12 m12 l12">
+            <table>
+                <thead>
+                <tr>
+                    <td></td>
+                    <td>ALARM INFORMATION</td>
+                    <td>TIME</td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><i class="fa fa-bell-o"></i></td>
+                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
+                    <td>10 Minute ago</td>
+                </tr>
+                <tr>
+                    <td><i class="fa fa-bell-o"></i></td>
+                    <td>DEFGH: GENE LIM(ABC1234) Fuel Alert  at 4.324213 5.123214</td>
+                    <td>30 Minute ago</td>
+                </tr>
+                <tr>
+                    <td><i class="fa fa-bell-o"></i></td>
+                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
+                    <td>1 Hour ago</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <div class="col s12 m12 l12">
+            <p>Regional Stat</p>
+
+        </div>
+    </div>
+</div>
+
+
+<!--
+<table>
+                <thead>
+                <tr>
+                    <td></td>
+                    <td>ALARM INFORMATION</td>
+                    <td>TIME</td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td style="background-color:#2ab4c0"><i class="fa fa-bell-o"></i></td>
+                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
+                    <td>10 Minute ago</td>
+                </tr>
+                <tr>
+                    <td style="background-color:#2ab4c0"><i class="fa fa-bell-o"></i></td>
+                    <td>DEFGH: GENE LIM(ABC1234) Fuel Alert  at 4.324213 5.123214</td>
+                    <td>30 Minute ago</td>
+                </tr>
+                <tr>
+                    <td style="background-color:#2ab4c0"><i class="fa fa-bell-o"></i></td>
+                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
+                    <td>1 Hour ago</td>
+                </tr>
+                </tbody>
+            </table>
+
+
+
+------------------------------------------------------
+
+
+
     <div class="col s12 m12 l12">
         <table>
             <thead class="center">
@@ -39,7 +161,6 @@ Dashboard (car list)
             </tbody>
         </table>
     </div>
-</div>
 
 <footer class="page-footer" style="width:100%;background-color:darkslategrey">
     <div class="row">
@@ -62,3 +183,5 @@ Dashboard (car list)
         </div>
     </div>
 </footer>
+
+-->
