--- a/public/app/report/alarm_frequency.html
+++ b/public/app/report/alarm_frequency.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12 menuseperator">
         <table>
             <thead>
             <tr>
