--- a/public/app/report/alarm_records.html
+++ b/public/app/report/alarm_records.html
@@ -56,7 +56,7 @@
         <a class="btn buttonspace">Export</a>
     </div>
 
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12 menuseperator">
         <p class="col s12 m12 l6 left">Statistical Time:</p>
         <p class="col s12 m12 l6 right">(Current Time)</p>
         <table>
