--- a/public/app/report/driving_records.html
+++ b/public/app/report/driving_records.html
@@ -43,16 +43,18 @@
                 <input type="checkbox" id="test1"/><label for="test1"></label>Only ignition ON record
             </div>
             <div class="col s12 m12 l12">
-                Statistics interval:<input type="text" style="width:50%">Minute
+                <br/>Statistics interval:<br/><input type="text" style="width:50%">Minute
             </div>
         </div>
-    </div>
-    <div class="col s12 m12 l2">
-        <a class="btn">Statistics</a>
-        <a class="btn buttonspace">Export</a>
+
+        <div class="col s12 m12 l2">
+            <a class="btn">Statistics</a>
+            <a class="btn buttonspace">Export</a>
+        </div>
     </div>
 
-    <div class="col s12 m12 l12">
+
+    <div class="col s12 m12 l12 menuseperator">
         <p class="col s12 m12 l12">Statistical Time</p>
         <p class="col s12 m12 l4">Total time:</p>
         <p class="col s12 m12 l4">Travel time:</p>
