--- a/public/app/report/operation_log.html
+++ b/public/app/report/operation_log.html
@@ -49,7 +49,7 @@
         <a class="btn">Search</a>
     </div>
 
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12 menuseperator">
         <table>
             <thead>
             <tr>
