--- a/public/app/report/gprs_flow.html
+++ b/public/app/report/gprs_flow.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12 menuseperator">
         <table>
             <thead>
             <tr>
