--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -1,187 +1,134 @@
-<div class="row">
-    <div class="card col s12 m12 l6" style="height:500px">
-        <div class="card-title col s12 m12 l12">
-            <p><i class="fa fa-bar-chart"></i><b style="margin-left:2%">Member Activity</b></p>
+<div class=row">
+    <div class="col s12 m12 l12">
+        <ul class="tabs">
+            <li class="tab col s3"><a class="active" href="#carlist">Carlist</a></li>
+            <li class="tab col s3"><a href="#carmapping">Map</a></li>
+        </ul>
+    </div>
+
+    <div class="col s12 m12 l12" id="carlist">
+        <div class="col s12 m12 l12 center">
+            <p style="color:#2ab4c0"><i class="fa fa-truck"></i><b style="margin-left:2%">Vehicle List</b></p>
         </div>
-        <div class="card-content col s12 m12 l12">
-            <div class="container col s12 m12 l12">
-                <div class="col s12 m12 l2">
-                    <p style="font-size:130%;text-align:right">Total</p>
-                    <b style="font-size:250%">2640</b>
-                </div>
-                <div class="col s12 m12 l5">
-                    <!--GRAPH-->
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m12 l12">
-            <table>
-                <thead>
+        <table>
+            <thead>
                 <tr>
                     <td><b>FLEET</b></td>
-                    <td><b>MEMBER</b></td>
                     <td><b>PLATE NO</b></td>
-                    <td><b>PHONE NO</b></td>
-                    <td><b>ADDRESS</b></td>
+                    <td><b>DRIVER NAME</b></td>
+                    <td><b>GROUP NAme</b></td>
+                    <td><b>SPEED</b></td>
+                    <td><b>Fuel</b></td>
+                    <td><b>Today Milleage</b></td>
+                    <td><b>Ignition</b></td>
+                    <td><b>Location</b></td>
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 <tr>
-                    <td>ABCDE</td>
+                    <td>Abc Fleet</td>
+                    <td>ABC 1234</td>
                     <td>GENE LIM</td>
-                    <td>ABC1234</td>
-                    <td>0123456789</td>
+                    <td>SHSPG</td>
+                    <td>80 km/h</td>
+                    <td>800</td>
+                    <td>75.6km</td>
+                    <td>ON</td>
                     <td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>
                 </tr>
                 <tr>
-                    <td>DEFGH</td>
+                    <td>Abc Fleep</td>
+                    <td>DE F5678</td>
                     <td>DENNIS LEE</td>
-                    <td>DEF5678</td>
-                    <td>0124356789</td>
-                    <td>67 Lorong Kinta,10400 Georgetown, Pulau Pinang</td>
+                    <td>SHSPG</td>
+                    <td>76km/h</td>
+                    <td>840</td>
+                    <td>58km</td>
+                    <td>ON</td>
+                    <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
                 </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div class="card col s12 m12 l6" style="height:500px">
-        <div class="card-title col s12 m12 l12">
-            <p style="color:#2ab4c0"><i class="fa fa-globe"></i><b style="margin-left:2%">FEEDS</b></p>
-        </div>
-        <div class="card-content col s12 m12 l12">
-            <table>
-                <thead>
-                <tr>
-                    <td></td>
-                    <td>ALARM INFORMATION</td>
-                    <td>TIME</td>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><i class="fa fa-bell-o"></i></td>
-                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
-                    <td>10 Minute ago</td>
-                </tr>
-                <tr>
-                    <td><i class="fa fa-bell-o"></i></td>
-                    <td>DEFGH: GENE LIM(ABC1234) Fuel Alert  at 4.324213 5.123214</td>
-                    <td>30 Minute ago</td>
-                </tr>
-                <tr>
-                    <td><i class="fa fa-bell-o"></i></td>
-                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
-                    <td>1 Hour ago</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div class="col s12 m12 l12">
-        <div class="col s12 m12 l12">
-            <p>Regional Stat</p>
-
-        </div>
-    </div>
-</div>
-
-
-<!--
-<table>
-                <thead>
-                <tr>
-                    <td></td>
-                    <td>ALARM INFORMATION</td>
-                    <td>TIME</td>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td style="background-color:#2ab4c0"><i class="fa fa-bell-o"></i></td>
-                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
-                    <td>10 Minute ago</td>
-                </tr>
-                <tr>
-                    <td style="background-color:#2ab4c0"><i class="fa fa-bell-o"></i></td>
-                    <td>DEFGH: GENE LIM(ABC1234) Fuel Alert  at 4.324213 5.123214</td>
-                    <td>30 Minute ago</td>
-                </tr>
-                <tr>
-                    <td style="background-color:#2ab4c0"><i class="fa fa-bell-o"></i></td>
-                    <td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>
-                    <td>1 Hour ago</td>
-                </tr>
-                </tbody>
-            </table>
-
-
-
-------------------------------------------------------
-
-
-
-    <div class="col s12 m12 l12">
-        <table>
-            <thead class="center">
-            <tr><th data-field="">Select</th>
-                <th data-field="plate_number">Plate No</th>
-                <th data-field="driver_name">Driver Name</th>
-                <th data-field="group_name">Group Name</th>
-                <th data-field="millage">Today Millage</th>
-                <th data-field="speed">Speed</th>
-                <th data-field="fuel">Fuel</th>
-                <th data-field="Ignition">Ignition</th>
-                <th data-field="current_location">Current Location</th></tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td><input type="checkbox" class="active" id="user_checkbox" /><label for="user_checkbox"></label></td>
-                <td><i class="fa fa-truck" style="padding-right:2%"></i>PLK 4581</td>
-                <td>Gene Lim</td>
-                <td>KDU Group</td>
-                <td>250km</td>
-                <td>80km/h</td>
-                <td>485/48%</td>
-                <td>ON</td>
-                <td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>
-            </tr>
-            <tr>
-                <td><input type="checkbox" id="user_checkbox" /><label for="user_checkbox"></label></td>
-                <td><i class="fa fa-car" style="padding-right:2%"></i>PHN 1229</td>
-                <td>Dennis Lee</td>
-                <td>Penang Group</td>
-                <td>0km</td>
-                <td>0km/h</td>
-                <td>670/67%</td>
-                <td>OFF</td>
-                <td>67, Lorong Kinta, 10400, Georgetown, Pulau Pinang</td>
-            </tr>
             </tbody>
         </table>
     </div>
 
-<footer class="page-footer" style="width:100%;background-color:darkslategrey">
-    <div class="row">
-        <div class="col s12 m12 l12">
-            <table>
-                <tr>
-                    <td style="color:white">Plate NO: <b style="color:yellow">PLK 4581</b></td>
-                    <td style="color:white">System NO: <b style="color:yellow">0123456789</b></td>
-                    <td style="color:white">Ignition: <b style="color:yellow">ON</b></td>
-                    <td style="color:white">Today Millage: <b style="color:yellow">250km</b></td>
-                    <td style="color:white">Speed: <b style="color:yellow">80km/h</b></td>
-                    <td style="color:white">Fuel: <b style="color:yellow">485L/48%</b></td>
-                </tr>
-                <tr>
-                    <td style="color:white">Level value:27.466V</td>
-                    <td style="color:white">Teperature: <b style="color:yellow">80℃</b></td>
-                    <td style="color:white">Location: <b style="color:yellow">SPICE Arena, Bayan Leaps, Pulau Pinang</b></td>
-                </tr>
-            </table>
-        </div>
+    <div class="col s12 m12 l12" id="carmapping">
+        <!--12321-->
     </div>
-</footer>
+</div>
+<!--<div class="row">-->
+    <!--<div class="card col s12 m12 l6" style="height:500px">-->
+        <!--<div class="card-title col s12 m12 l12">-->
+            <!---->
+        <!--</div>-->
+        <!--<div class="card-content col s12 m12 l12">-->
+            <!--<table>-->
+                <!--<thead>-->
+                <!--<tr>-->
+                    <!--<td><b>FLEET</b></td>-->
+                    <!--<td><b>MEMBER</b></td>-->
+                    <!--<td><b>PLATE NO</b></td>-->
+                    <!--<td><b>PHONE NO</b></td>-->
+                    <!--<td><b>ADDRESS</b></td>-->
+                <!--</tr>-->
+                <!--</thead>-->
+                <!--<tbody>-->
+                <!--<tr>-->
+                    <!--<td>ABCDE</td>-->
+                    <!--<td>GENE LIM</td>-->
+                    <!--<td>ABC1234</td>-->
+                    <!--<td>0123456789</td>-->
+                    <!--<td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>-->
+                <!--</tr>-->
+                <!--<tr>-->
+                    <!--<td>DEFGH</td>-->
+                    <!--<td>DENNIS LEE</td>-->
+                    <!--<td>DEF5678</td>-->
+                    <!--<td>0124356789</td>-->
+                    <!--<td>67 Lorong Kinta,10400 Georgetown, Pulau Pinang</td>-->
+                <!--</tr>-->
+                <!--</tbody>-->
+            <!--</table>-->
+        <!--</div>-->
+    <!--</div>-->
 
--->
+    <!--<div class="card col s12 m12 l6" style="height:500px">-->
+        <!--<div class="card-title col s12 m12 l12">-->
+            <!--<p style="color:#2ab4c0"><i class="fa fa-globe"></i><b style="margin-left:2%">FEEDS</b></p>-->
+        <!--</div>-->
+        <!--<div class="card-content col s12 m12 l12">-->
+            <!--<table>-->
+                <!--<thead>-->
+                <!--<tr>-->
+                    <!--<td></td>-->
+                    <!--<td>ALARM INFORMATION</td>-->
+                    <!--<td>TIME</td>-->
+                <!--</tr>-->
+                <!--</thead>-->
+                <!--<tbody>-->
+                <!--<tr>-->
+                    <!--<td><i class="fa fa-bell-o"></i></td>-->
+                    <!--<td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>-->
+                    <!--<td>10 Minute ago</td>-->
+                <!--</tr>-->
+                <!--<tr>-->
+                    <!--<td><i class="fa fa-bell-o"></i></td>-->
+                    <!--<td>DEFGH: GENE LIM(ABC1234) Fuel Alert  at 4.324213 5.123214</td>-->
+                    <!--<td>30 Minute ago</td>-->
+                <!--</tr>-->
+                <!--<tr>-->
+                    <!--<td><i class="fa fa-bell-o"></i></td>-->
+                    <!--<td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>-->
+                    <!--<td>1 Hour ago</td>-->
+                <!--</tr>-->
+                <!--</tbody>-->
+            <!--</table>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<div class="col s12 m12 l12">-->
+        <!--<div class="col s12 m12 l12">-->
+
+            <!--<div id="map" style="width: calc(97%); height: 100%; position:absolute"></div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
