--- a/public/app/report/find_photo.html
+++ b/public/app/report/find_photo.html
@@ -43,16 +43,16 @@
         </div>
     </div>
 
-    <div class="right" style="padding-top:1%">
+    <div class="center" style="padding-top:1%">
         <div class="col s12 m12 l12">
             <ul class="pagination">
-                <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
                 <li class="active"><a href="#!">1</a></li>
                 <li class="waves-effect"><a href="#!">2</a></li>
                 <li class="waves-effect"><a href="#!">3</a></li>
                 <li class="waves-effect"><a href="#!">4</a></li>
                 <li class="waves-effect"><a href="#!">5</a></li>
-                <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
             </ul>
         </div>
     </div>
