--- a/public/index.html
+++ b/public/index.html
@@ -43,17 +43,17 @@
                         </div>
                         <div class="col l6 s12 input-field">
                             <input id="new-your-email" type="text" ng-model="user.response.email">
-                            <label for="new-your-email">Your email address</label>
+                            <label for="new-your-email" class="active">Your email address</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col l6 s12 input-field">
-                            <input id="new-your-email" type="text" ng-model="user.response.role[0]">
-                            <label for="new-your-email">Your role</label>
+                            <input id="new-your-role" type="text" ng-model="user.response.role[0]">
+                            <label for="new-your-role" class="active">Your role</label>
                         </div>
                         <div class="col l6 s12 input-field">
                             <input id="note" type="password" ng-model="vm.user.note">
-                            <label for="note">Note</label>
+                            <label for="note" class="active">Note</label>
                         </div>
                     </div>
                     <div class="row center">
@@ -74,6 +74,7 @@
         <script src="app/home/home.js"></script>
         <script src="app/home/navigation.js"></script>
         <script src="app/dashboard/dashboard.js"></script>
+        <script src="app/dashboard/home.js"></script>
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
         <script src="app/admin/home.js"></script>
