--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -1,15 +1,12 @@
 <div class=row">
     <div class="col s12 m12 l12">
         <ul class="tabs">
-            <li class="tab col s3"><a class="active" href="#carlist">Carlist</a></li>
+            <li class="tab col s3"><a class="active" href="#carlist"><i class="fa fa-truck"></i>Vehicle List</a></li>
             <li class="tab col s3"><a href="#carmapping">Map</a></li>
         </ul>
     </div>
 
     <div class="col s12 m12 l12" id="carlist">
-        <div class="col s12 m12 l12 center">
-            <p style="color:#2ab4c0"><i class="fa fa-truck"></i><b style="margin-left:2%">Vehicle List</b></p>
-        </div>
         <table>
             <thead>
                 <tr>
